tests/ui/macros/issue-118048.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/issue-118048.rs:7:6
   |
LL | foo!(_);
   |      ^
   |      |
   |      not allowed in type signatures
   |      not allowed in type signatures
   |
help: use type parameters instead
   |
LL ~         fn foo<T>(_: $ty, _: $ty) {}
LL |     }
LL | }
LL |
LL ~ foo!(T);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
